Removing usages of guava libraries in dexlib2/dexbacked